# veda-python-queue-consumer

./: .gitignore  Cargo.toml  README.md  README_WHEELS.md  build-wheel.py  example.py  install.py  setup.py
src/: lib.rs
wheels/ubuntu24.04-x86_64/: platform-info.txt  v_queue_python-0.1.0-cp312-cp312-linux_x86_64.json  v_queue_python-0.1.0-cp312-cp312-linux_x86_64.whl  v_queue_python-0.1.1-cp312-cp312-linux_x86_64.json  v_queue_python-0.1.1-cp312-cp312-linux_x86_64.whl
