[package]
name = "v-queue-python"
version = "0.1.2"
edition = "2021"
description = "Python bindings for v-queue - persistent queue implementation"

[lib]
name = "vqueue"  # This will be the name of the Python module
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
fs2 = "0.4"
crc32fast = "1.3"
scan_fmt = "0.2"
log = "0.4"
v_queue = "=0.2.7"
v-individual-model = "0.1.1" 
serde_json = "1.0"  # Still needed for JSON handling

[build-dependencies]
pyo3-build-config = "0.24.1"
